manifests/grafana/grafana-core-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
    component: core
spec:
  # type: NodePort
  ports:
    - port: 3000
  selector:
    app: grafana
    component: core
